--- a/mobile_first/index.html
+++ b/mobile_first/index.html
@@ -66,7 +66,7 @@
         </article>
     </main>
     
-    <footer>marcella harumy | 2024</footer>
+    <footer>Marcella Harumy | 2024</footer>
     
 </body>
 </html>
